crates/plotnik-lib/tests/02-parser/recovery_incomplete/named_def_missing_body.txt
Expr =
------------------ DIAGNOSTICS -------------------
error: expected an expression
 --> query.ptk:1:7
  |
1 | Expr =
  |       ^
  |
help: an expression is a node `(kind)`, anonymous node `"text"`, sequence `{...}`, or alternation `[...]`
